[gd_scene load_steps=6 format=3 uid="uid://byvydukidk6i2"]

[ext_resource type="PackedScene" uid="uid://c6k5nnpbypshi" path="res://addons/maaacks_game_template/base/nodes/menus/main_menu/main_menu.tscn" id="1_pss7b"]
[ext_resource type="Script" uid="uid://bdet8115mn02d" path="res://addons/maaacks_game_template/examples/scenes/menus/main_menu/main_menu.gd" id="2_lk0wa"]
[ext_resource type="PackedScene" uid="uid://dum2pujhh1w4g" path="res://addons/maaacks_game_template/examples/scenes/windows/main_menu_options_window.tscn" id="3_qhsni"]
[ext_resource type="PackedScene" uid="uid://c5pfkjxskjc60" path="res://addons/maaacks_game_template/examples/scenes/windows/main_menu_credits_window.tscn" id="4_qhsni"]
[ext_resource type="PackedScene" uid="uid://cwt4p3bufkke5" path="res://addons/maaacks_game_template/base/nodes/windows/confirmation_overlaid_window.tscn" id="5_qhsni"]

[node name="MainMenu" instance=ExtResource("1_pss7b")]
script = ExtResource("2_lk0wa")
level_select_packed_scene = null
confirm_new_game = true
options_packed_scene = ExtResource("3_qhsni")
credits_packed_scene = ExtResource("4_qhsni")

[node name="ContinueGameButton" type="Button" parent="MenuContainer/MenuButtonsMargin/MenuButtonsContainer/MenuButtonsBoxContainer" index="1"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Continue"

[node name="LevelSelectButton" type="Button" parent="MenuContainer/MenuButtonsMargin/MenuButtonsContainer/MenuButtonsBoxContainer" index="2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Level Select"

[node name="NewGameConfirmation" parent="." index="5" instance=ExtResource("5_qhsni")]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(420, 200)
layout_mode = 1
offset_left = -210.0
offset_top = -100.0
offset_right = 210.0
offset_bottom = 100.0
update_content = true
text = "Are you sure you want to start a new game?

All progress in the current game will be lost."
title = "New Game"

[connection signal="pressed" from="MenuContainer/MenuButtonsMargin/MenuButtonsContainer/MenuButtonsBoxContainer/ContinueGameButton" to="." method="_on_continue_game_button_pressed"]
[connection signal="pressed" from="MenuContainer/MenuButtonsMargin/MenuButtonsContainer/MenuButtonsBoxContainer/LevelSelectButton" to="." method="_on_level_select_button_pressed"]
[connection signal="confirmed" from="NewGameConfirmation" to="." method="_on_new_game_confirmation_confirmed"]
